# AdventOfCode2023

./: README.md  aoc.cabal  check.sh
aoc01/: Main.hs  problem
aoc02/: Main.hs  problem
aoc03/: Main.hs  problem
aoc04/: Main.hs  problem
aoc05/: Main.hs  problem
aoc06/: Main.hs  problem
aoc07/: Main.hs
aoc08/: Main.hs  problem  sample1
aoc09/: Main.hs  problem
aoc10/: Main.hs  problem
aoc11/: Main.hs  problem
aoc12/: Main.hs  problem
aoc13/: Main.hs  problem
aoc14/: Main.hs  problem
aoc15/: Main.hs  problem
aoc16/: Main.hs  problem
aoc17/: Main.hs  problem
aoc18/: Main.hs  problem
aoc19/: Main.hs  problem
aoc20/: Main.hs  problem
aoc21/: main.bqn  problem
aoc22/: aoc22.bqn  main.bqn  problem
aoc23/: aoc23.bqn  main.bqn  problem
aoc24/: main.bqn  problem
aoc25/: main.bqn  problem
